--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -27,10 +27,11 @@ else
 {
     <div class="bg"></div>
     <div class="flex-container align-bottom" id="flex-container">
+        <p></p>
+        <h1 style="color:white; height:100px"><b>Siemens</b> <i>management application for students</i></h1>
+        <img src="/css/logo-white.png" style="height:150px; margin:200px" />
+        <a href="Identity/Account/Login" class="cta">Authenticate</a>
 
-        <h1 >Siemiens management application for students</h1>
-        <p class="lead">This is the landing page. Click the CTA below if you would like me to design one for you.</p>
-        <a href="Identity/Account/Login" class="cta">Log In !</a>
     </div>
 }
 
