--- a/wwwroot/css/landingpage.css
+++ b/wwwroot/css/landingpage.css
@@ -6,8 +6,7 @@
 .bg {
     width: 100%;
     height: 100%;
-    background-image: url("https://s.iw.ro/gateway/g/ZmlsZVNvdXJjZT1odHRwJTNBJTJGJTJG/c3RvcmFnZTA3dHJhbnNjb2Rlci5yY3Mt/cmRzLnJvJTJGc3RvcmFnZSUyRjIwMTgl/MkYwOSUyRjI1JTJGOTgzNjU3Xzk4MzY1/N19zaWVtZW5zLmpwZyZ3PTgwMCZoYXNo/PTcyOGZjMmUyNjVkYmU1OTJjMzQ3OTcxYWRhZWJmNzBm.thumb.jpg?tmp=2019-09-26-16-10-28&app=req-5d8cb8c4a877a&retry=1");
-    background-size: cover;
+    background-image: url(background.png);
     background-position: center center;
     z-index: -1;
     position: fixed;
