Small changes to the UI

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    Ai <a href="#" class="alert-link">@nrHighPriorityTask</a> task-uri cu <span style="color:#c30000">High-Priority</span>! <strong>Alert Link.</strong>
+                    You have <a href="#" class="alert-link">@nrHighPriorityTask</a> tasks with <span style="color:#c30000">High-Priority</span>!
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
