--- a/Pages/Tasks.razor
+++ b/Pages/Tasks.razor
@@ -17,7 +17,6 @@ else
     <table class='table' id="tasks">
         <thead>
             <tr>
-                <th scope="col">#</th>
                 <th>Task Name</th>
                 <th>Description Preveiew</th>
                 <th>Deadline</th>
@@ -30,10 +29,9 @@ else
             @foreach (var task in tasks)
             {
                 <tr>
-                    <th>@task.Id</th>
                     <td><button class="btn btn-primary" @onclick="@(() => Navigate(task.Id))">@task.Name</button></td>
                     <td>@task.DescriptionPreview</td>
-                    <td>@task.Deadline</td>
+                    <td>@task.Deadline.Date</td>
                     <td>@task.PriorityState</td>
                     <td>
                         @task.State
@@ -72,7 +70,7 @@ else
                                     <span aria-hidden="true">X</span>
                                 </button>
                             </div>
-                            <!-- Form to add a new project -->
+                            <!-- Form to add a new Task -->
                             <div class="modal-body">
                                 <input class="form-control" type="text"
                                        placeholder="Task Title"
@@ -124,7 +122,7 @@ else
 }
 
 @code {
-
+    private int numberOfTask = 0;
     private string taskName;
     private string taskDescriptionPreview;
     private DateTime deadline = DateTime.Now;
