Implemented function to assign a student for a project only if he is not already assigned

--- a/Pages/Components/DetailedProjectComponent.razor
+++ b/Pages/Components/DetailedProjectComponent.razor
@@ -106,13 +106,17 @@ else if (addStudent == true)
                 <option disabled hidden>Select Student</option>
                 @foreach (var student in studentList)
                 {
-                    if (student.UserName.Contains("ctbav.ro"))
+                    alreadyAssigned = false;
+                    @foreach (var verifyStudent in userProjectList) if (verifyStudent.UserInfoId == student.Id && verifyStudent.ProjectId == IdProject)
+                        {
+                            alreadyAssigned = true;
+                        }
+                    if (student.UserName.Contains("ctbav.ro") && alreadyAssigned == false)
                     {
+                        <option value=@student.Id>@student.FirstName @student.LastName</option>
+                    }
 
-                    <option value=@student.Id>@student.FirstName @student.LastName</option>
-                     }
                 }
-
             </select>
 
             <!-- Button to add the task -->
@@ -179,7 +183,7 @@ else
     private string taskDescription;
     private IList<UserInfo> studentList;
     private string studentID;
-
+    private bool alreadyAssigned;
 
     [Parameter]
     public int IdProject { get; set; }
