--- a/Pages/Components/NoteComponent.razor
+++ b/Pages/Components/NoteComponent.razor
@@ -6,9 +6,9 @@
 <div class="card">
     <div class="card-header" style="background-color:#ba55d3">
         <p class="h5">
-            <button id="0HLPTKM2659LL" type="button" class="btn" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                <img src="/css/writing.png" height="20" width="20">
-                <b>Note</b>
+            <button id="0HLPTKM2659LL" type="button" class="btn" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="width:100px">
+                <img src="/css/note-2-xxl.png" height="20" width="20" style="float:left">
+                <h5 style="color:white"><b>Note</b></h5>
             </button>
         </p>
     </div>
